# pathtracer

./: .gitignore  CMakeLists.txt  README.md  bvh.h  camera.cpp  camera.h  main.cpp  obj_loader.h  ray.h  scene.h  shaders.metal
.cache/clangd/index/: CADefines.hpp.1ABFE2E4654485EF.idx  CAMetalDrawable.hpp.9338E1E9E11BB4F9.idx  CAMetalLayer.hpp.5F66C89F2B41E81F.idx  CAPrivate.hpp.665EDBB86B468A10.idx  Foundation.hpp.E46988807ED37DA1.idx  MTL4Archive.hpp.1459032F15B84976.idx  MTL4ArgumentTable.hpp.E092ED56B5721AB4.idx  MTL4BinaryFunction.hpp.5329E0C051CFBE12.idx  MTL4BinaryFunctionDescriptor.hpp.1CDD9A911CD40B73.idx  MTL4CommandAllocator.hpp.8FAE0B5A567C6D69.idx  MTL4CommandBuffer.hpp.5648DDA0F15946A5.idx  MTL4CommandEncoder.hpp.DAA0C90444F40B54.idx  MTL4CommandQueue.hpp.DF39F375218BB749.idx  MTL4CommitFeedback.hpp.EE773752F878151F.idx  MTL4Compiler.hpp.7EE0E42C4DC6BAE2.idx  MTL4CompilerTask.hpp.84BA310B0D86C9C6.idx  MTL4ComputeCommandEncoder.hpp.E711C7043B6C2E4C.idx  MTL4ComputePipeline.hpp.2441091B3AF1EBD4.idx  MTL4Counters.hpp.481B275B35B82735.idx  MTL4FunctionDescriptor.hpp.0FFDC35BF6AC56B7.idx  MTL4LibraryDescriptor.hpp.6DFD7A99028D89AB.idx  MTL4LibraryFunctionDescriptor.hpp.EBF792070F4CE55C.idx  MTL4LinkingDescriptor.hpp.27E4F5A6AC651249.idx  MTL4MachineLearningCommandEncoder.hpp.1663902F8C461D38.idx  MTL4MachineLearningPipeline.hpp.A34A071B8CA69198.idx  MTL4MeshRenderPipeline.hpp.C27A78DCCED1C963.idx  MTL4PipelineDataSetSerializer.hpp.490801EC0734C65E.idx  MTL4PipelineState.hpp.DB3E867F4526607C.idx  MTL4RenderCommandEncoder.hpp.A28524E58E506164.idx  (+102 more)
